--- a/docs/.vuepress/theme/styles/override.styl
+++ b/docs/.vuepress/theme/styles/override.styl
@@ -1,5 +1,8 @@
 // custom colors
-$accentColor = #ff5c5c;
+// keep standard vue colors for now
+/*
+# $accentColor = #ff5c5c;
 $textColor = #292A2E
 $borderColor = #eaecef
 $codeBgColor = #292A2E
+*/
