adding image and meta information for better tweetability of the link

--- a/docs/.vuepress/theme/styles/override.styl
+++ b/docs/.vuepress/theme/styles/override.styl
@@ -6,3 +6,9 @@ $textColor = #292A2E
 $borderColor = #eaecef
 $codeBgColor = #292A2E
 */
+
+@media (min-width: ($MQNarrow))
+  .imagenextotext
+    img
+      float: right
+      padding: 15px
